; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Resize_Less.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Resize_Less.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Table = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Table*)* @Table_Resize_Less to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Table_Resize_Less(%struct.Table* %0) #0 {
  %2 = alloca %struct.Table*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.Table* %0, %struct.Table** %2, align 8
  %5 = load %struct.Table*, %struct.Table** %2, align 8
  %6 = getelementptr inbounds %struct.Table, %struct.Table* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = call i64 @Table_Ideal_Size(i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load %struct.Table*, %struct.Table** %2, align 8
  %10 = getelementptr inbounds %struct.Table, %struct.Table* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.Table*, %struct.Table** %2, align 8
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @Table_Rehash(%struct.Table* %16, i64 %17)
  br label %19

19:                                               ; preds = %15, %1
  ret void
}

declare dso_local i64 @Table_Ideal_Size(i32) #1

declare dso_local i32 @Table_Rehash(%struct.Table*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
